--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <body>
 
       <div id="main">
-          <h1 id="title"> first </h1>
+          <h1 id="title"> first Title </h1>
+          <div id="img-div">
+            <img src="" alt="" id="image"">
+
+          </div>
+
       </div>
 
 
