--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <div id="main">
           <h1 id="title"> first Title </h1>
           <div id="img-div">
-            <img src="" alt="" id="image"">
+            <img src="" alt="" id="image">
+            <p id="img-caption">this is an image</p>
+            <p id="tribute-info">this is the description of this page</p>
 
           </div>
 
