--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title></title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
+   
   </head>
 
   <body>
@@ -15,9 +16,14 @@
       <div id="main">
           <h1 id="title"> first Title </h1>
           <div id="img-div">
-            <img src="" alt="" id="image">
+            <img src="" alt="" id="image" style="max-width: 100%;
+            display: block;
+            height: auto;
+            margin-left: auto;
+            margin-right: auto;">
             <p id="img-caption">this is an image</p>
             <p id="tribute-info">this is the description of this page</p>
+            <a href="" target="_blank" id="tribute-link">Click Here</a>
 
           </div>
 
