--- a/index.html
+++ b/index.html
@@ -4,26 +4,17 @@
     <meta charset="UTF-8">
     <title></title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
-   
   </head>
 
   <body>
     <main id="main">
-      <title id="title">Dr. Norman Borlaug</title>
-    </main>
-    
-
-      <div id="main">
-          <h1 id="title"> first Title </h1>
+       <h1 id="title">Dr. Norman Borlaug </h1>
           <div id="img-div">
-            <img src="" alt="" id="image" style="max-width: 100%;
-            display: block;
-            height: auto;
-            margin-left: auto;
-            margin-right: auto;">
+            <caption id="img-caption">This is Dr. Norman Borlaug</caption>
+            <img src="" alt="" id="image">
+          
             <p id="img-caption">this is an image</p>
             <p id="tribute-info">this is the description of this page</p>
-            <a href="" target="_blank" id="tribute-link">Click Here</a>
 
           </div>
 
@@ -32,7 +23,7 @@
       </div>
 
 
-
+    </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
   
