--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
        <h1 id="title">Dr. Norman Borlaug </h1>
           <div id="img-div">
             <caption id="img-caption">This is Dr. Norman Borlaug</caption>
-            <img src="" alt="" id="image">
+            <img src="" alt="" id="image" style="max-width: 100%;
+            display: block;
+            height: auto;
+            margin-left: auto;
+            margin-right: auto;">
           
-            
+            <p id="img-caption">this is an image</p>
             <p id="tribute-info">this is the description of this page</p>
-
+              <a href="" target="_blank" id="tribute-link">Click Here</a>
           </div>
 
       </div>
